// Copyright 2021 Harness Inc.
// 
// Licensed under the Apache License, Version 2.0
// http://www.apache.org/licenses/LICENSE-2.0

syntax = "proto3";

package io.harness.perpetualtask.k8s.watch;

option java_multiple_files = true;

message K8sWatchTaskParams {
  string cloud_provider_id = 1;
  bytes k8s_cluster_config = 2 [deprecated = true];  // this is currentGen, use k8s_cluster_info instead in NG
  string cluster_id = 3;
  string cluster_name = 4;

  bytes k8s_cluster_info = 5;  // NG
}
